# CyberSOC-OpenEnv

./: .gitignore  Dockerfile  README.md  cyber_soc_env.py  graders.py  index.html  inference.py  models.py  openenv.yaml  push_help.txt  push_output.txt  push_output2.txt  push_output_utf8.txt  pyproject.toml  raw_output.txt  raw_output2.txt  raw_output2_utf8.txt  raw_output3.txt  raw_output3_utf8.txt  raw_output4.txt  raw_output4_utf8.txt  raw_output_utf8.txt  requirements.txt  validate_output.txt  validate_output2.txt  validate_output3.txt
cybersoc_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
graders/: graders.py
server/: app.py
